--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
         </div>
         <div class="row">
           <!-- Contact Details -->
-          <a class="col-md-6 map" href="https://goo.gl/maps/fGKBPpdDYTNJyH3MA"></a>
+          <a class="col-md-6 map" href="https://goo.gl/maps/fGKBPpdDYTNJyH3MA" target="_blank"></a>
           <!-- / End Contact Details -->
 
           <!-- Contact Form -->
