--- a/pages/achievement.html
+++ b/pages/achievement.html
@@ -87,56 +87,56 @@
                 </div>
                 <div class="imgs-container">
                     <div class="box">
-                        <img src="https://picsum.photos/300/200" alt="" />
+                        <img src="https://picsum.photos/300/150" alt="" />
                         <div class="caption">
                             <h4>Awesome Image</h4>
                             <p>Photography</p>
                         </div>
                     </div>
                     <div class="box">
-                        <img src="https://picsum.photos/300/200" alt="" />
+                        <img src="https://picsum.photos/300/150" alt="" />
                         <div class="caption">
                             <h4>Awesome Image</h4>
                             <p>Photography</p>
                         </div>
                     </div>
                     <div class="box">
-                        <img src="https://picsum.photos/300/200" alt="" />
+                        <img src="https://picsum.photos/300/150" alt="" />
                         <div class="caption">
                             <h4>Awesome Image</h4>
                             <p>Photography</p>
                         </div>
                     </div>
                     <div class="box">
-                        <img src="https://picsum.photos/300/200" alt="" />
+                        <img src="https://picsum.photos/300/150" alt="" />
                         <div class="caption">
                             <h4>Awesome Image</h4>
                             <p>Photography</p>
                         </div>
                     </div>
                     <div class="box">
-                        <img src="https://picsum.photos/300/200" alt="" />
+                        <img src="https://picsum.photos/300/150" alt="" />
                         <div class="caption">
                             <h4>Awesome Image</h4>
                             <p>Photography</p>
                         </div>
                     </div>
                     <div class="box">
-                        <img src="https://picsum.photos/300/200" alt="" />
+                        <img src="https://picsum.photos/300/150" alt="" />
                         <div class="caption">
                             <h4>Awesome Image</h4>
                             <p>Photography</p>
                         </div>
                     </div>
                     <div class="box">
-                        <img src="https://picsum.photos/300/200" alt="" />
+                        <img src="https://picsum.photos/300/150" alt="" />
                         <div class="caption">
                             <h4>Awesome Image</h4>
                             <p>Photography</p>
                         </div>
                     </div>
                     <div class="box">
-                        <img src="https://picsum.photos/300/200" alt="" />
+                        <img src="https://picsum.photos/300/150" alt="" />
                         <div class="caption">
                             <h4>Awesome Image</h4>
                             <p>Photography</p>
@@ -274,7 +274,7 @@
                 </div>
                 <div class="row">
                     <!-- Contact Details -->
-                    <a class="col-md-6 map" href="https://goo.gl/maps/fGKBPpdDYTNJyH3MA"></a>
+                    <a class="col-md-6 map" href="https://goo.gl/maps/fGKBPpdDYTNJyH3MA" target="_blank"></a>
                     <!-- / End Contact Details -->
 
                     <!-- Contact Form -->
