--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               <li><a class="dropdown-item" href="#history">History</a></li>
               <li><a class="dropdown-item" href="#activity">Activities</a></li>
               <li><a class="dropdown-item" href="#comments">Comments</a></li>
-              <li><a class="dropdown-item" href="#contactus">Contact Us</a></li>
+              <li><a class="dropdown-item" href="#contact">Contact Us</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
@@ -78,9 +78,9 @@
   <!-- ? about section -Boody -->
   <section id="about" class="text-center py-5 bg-dark">
     <div class="container text-dark">
-      <h2 class="special-heading mb-4 mt-5">تعرف علينا</h2>
+      <h2 class="special-heading mb-5 mt-md-4">تعرف علينا</h2>
       <div class="d-flex justify-content-around align-items-center flex-column flex-lg-row">
-        <div class="text-start d-flex flex-lg-column me-lg-5 justify-content-center">
+        <div class="text-start d-flex flex-column me-lg-5 justify-content-center">
           <div class="card bg-main hoverbg p-3 mb-2">
             <div class="card-body text-center">
               <div class="card-title text-capitalize h4">مهمتنا</div>
@@ -109,7 +109,7 @@
   <!-- ? History of the school section -->
   <section id="history" class="py-5 text-center align-items-center">
     <div class="container">
-      <h2 class="special-heading mt-5">تاريخنا</h2>
+      <h2 class="special-heading mt-md-4">تاريخنا</h2>
       <div class="d-flex mt-5 justify-content-between align-items-center flex-column flex-md-row">
         <div class="img-fluid imgcont">
           <img src="img/banner.jpg" class="img-fluid imghover" alt="" />
@@ -127,9 +127,9 @@
   </section>
   <!-- * Activity Section - Amr -->
   <section id="activity" class="py-5 text-center align-items-center bg-dark">
-    <h2 class="special-heading">الأنشطة</h2>
+    <h2 class="special-heading mt-md-4">الأنشطة</h2>
     <div class="container px-4">
-      <div class="row row-cols-1 row-cols-md-2 align-items-md-center g-5 py-5">
+      <div class="row row-cols-1 row-cols-md-2 justify-content-center align-items-md-center g-5 py-5">
         <div class="d-flex flex-column align-items-start text-light gap-2">
           <h3 class="fw-bold">Left-aligned title explaining these awesome features</h3>
           <p class="text-muted">Paragraph of text beneath the heading to explain the heading. We'll add onto it with
@@ -179,11 +179,11 @@
   <!-- ? comments Section - Boody -->
   <section id="comments" class="py-5 text-center">
     <div class="container">
-      <h2 class="special-heading">التعليقات</h2>
+      <h2 class="special-heading mt-md-4">التعليقات</h2>
       <div id="one" class="carousel slide my-5" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item text-center active">
-            <div class="d-block w-50 bg-main hoverbg p-4 m-auto">
+            <div class="d-block w-75  bg-main hoverbg p-4 m-auto">
               <h6 class="text-capitalize h4 ">mohammmed</h6>
               <p class="lead">
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. At
@@ -193,7 +193,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <div class="d-block w-50 bg-main hoverbg p-4 m-auto">
+            <div class="d-block w-75  bg-main hoverbg p-4 m-auto">
               <h6 class="text-capitalize h4">ibrahim</h6>
               <p class="lead">
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. At
@@ -203,7 +203,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <div class="d-block w-50 bg-main hoverbg p-4 m-auto">
+            <div class="d-block w-75 bg-main hoverbg p-4 m-auto ">
               <h6 class="text-capitalize h4">adel</h6>
               <p class="lead">
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. At
@@ -214,7 +214,7 @@
           </div>
 
           <div class="carousel-item">
-            <div class="d-block w-50 bg-main hoverbg p-4 m-auto">
+            <div class="d-block w-75 bg-main hoverbg p-4 m-auto">
               <h6 class="text-capitalize h4">ramy</h6>
               <p class="lead">
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. At
@@ -238,12 +238,12 @@
   </section>
 
   <!-- Contact us Section -->
-  <section class="contact-us bg-dark" id="contact">
+  <section class="contact-us py-5 bg-dark" id="contact">
     <div class="container">
-      <div class="row">
+      <div class="row justify-content-center align-items-center">
         <div class="col-12">
           <div class="title text-center">
-            <h2 class="special-heading mb-4">
+            <h2 class="special-heading mb-4 mt-md-4">
               تواصل معنا
             </h2>
             <p class="text-light">
@@ -253,14 +253,14 @@
           </div>
         </div>
       </div>
-      <div class="row">
+      <div class="row align-items-center">
         <!-- Contact Details -->
-        <a class="col-md-6 map" href="https://goo.gl/maps/fGKBPpdDYTNJyH3MA" target="_blank">
+        <a class="col-md-6  map" href="https://goo.gl/maps/fGKBPpdDYTNJyH3MA" target="_blank">
           <span>Click here for location <i class="bi bi-hand-index-thumb-fill"></i></span></a>
         <!-- / End Contact Details -->
 
         <!-- Contact Form -->
-        <div class="contact-form col-md-6">
+        <div class="contact-form col-md-6 text-center">
           <form id="contact-form" method="post" action="sendmail.php" role="form" novalidate="novalidate">
             <div class="form-group">
               <input type="text" placeholder="Your Name" class="form-control input" name="name" id="name" />
@@ -289,12 +289,12 @@
         <!-- ./End Contact Form -->
       </div>
       <!-- end row -->
-      <div class="row">
+      <div class="row justify-content-center text-center">
         <div class="col-md-4 mt-4 hoverbg2 text-light">
-          <div class="address-block contact-meta-block">
+          <div class="address-block contact-meta-block text-center">
             <i class="d-inline fs-4 bi bi-pin-map-fill"></i>
             <h4 class="d-inline">Our Location</h4>
-            <p class="arabic text-start">
+            <p class="arabic text-md-start">
               5 متفرع من، جسر السويس <br />
               سراى القبة، محافظة القاهرة <br />
             </p>
@@ -313,7 +313,7 @@
           <div class="social-icons-block contact-meta-block">
             <i class="d-inline fs-4 bi bi-chat-dots-fill"></i>
             <h4 class="d-inline"> We are social</h4>
-            <ul class="ms-4 list-inline social-icon">
+            <ul class="ms-md-4 list-inline social-icon">
               <li class="list-inline-item">
                 <a href="#"><i class="fs-2 text-muted bi bi-facebook"></i></a>
               </li>
