--- a/pages/achievement.html
+++ b/pages/achievement.html
@@ -55,7 +55,7 @@
                             </li>
                             <li><a class="dropdown-item" href="#teachers">Teachers</a></li>
                             <li><a class="dropdown-item" href="#comments">Comments</a></li>
-                            <li><a class="dropdown-item" href="#contact us">Contact Us</a></li>
+                            <li><a class="dropdown-item" href="#contact">Contact Us</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -68,7 +68,7 @@
     <!--* Achievement section -Amr -->
     <section id="achievements" class=" py-5 text-center align-items-center">
         <div class="container">
-            <h2 class="special-heading">الإنجازات</h2>
+            <h2 class="special-heading mt-md-4">الإنجازات</h2>
             <!-- Start Portfolio -->
             <div class="portfolio">
                 <div class="container">
@@ -204,11 +204,11 @@
     <!-- ? comments Section - Boody -->
     <section id="comments" class="py-5 text-center">
         <div class="container">
-            <h2 class="special-heading">التعليقات</h2>
+            <h2 class="special-heading mt-md-4">التعليقات</h2>
             <div id="one" class="carousel slide my-5" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item text-center active">
-                        <div class="d-block w-50 bg-main hoverbg p-4 m-auto">
+                        <div class="d-block w-75 bg-main hoverbg p-4 m-auto">
                             <h6 class="text-capitalize h4 ">mohammmed</h6>
                             <p class="lead">
                                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. At
@@ -218,7 +218,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <div class="d-block w-50 bg-main hoverbg p-4 m-auto">
+                        <div class="d-block w-75 bg-main hoverbg p-4 m-auto">
                             <h6 class="text-capitalize h4">ibrahim</h6>
                             <p class="lead">
                                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. At
@@ -228,7 +228,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <div class="d-block w-50 bg-main hoverbg p-4 m-auto">
+                        <div class="d-block w-75 bg-main hoverbg p-4 m-auto">
                             <h6 class="text-capitalize h4">adel</h6>
                             <p class="lead">
                                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. At
@@ -239,7 +239,7 @@
                     </div>
 
                     <div class="carousel-item">
-                        <div class="d-block w-50 bg-main hoverbg p-4 m-auto">
+                        <div class="d-block w-75 bg-main hoverbg p-4 m-auto">
                             <h6 class="text-capitalize h4">ramy</h6>
                             <p class="lead">
                                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. At
@@ -268,7 +268,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="title text-center">
-                        <h2 class="special-heading mb-4">
+                        <h2 class="special-heading mb-4 mt-md-4">
                             تواصل معنا
                         </h2>
                         <p class="text-white">
@@ -317,12 +317,12 @@
                 <!-- ./End Contact Form -->
             </div>
             <!-- end row -->
-            <div class="row">
+            <div class="row align-items-center text-center">
                 <div class="col-md-4 mt-4 hoverbg2 text-light">
                     <div class="address-block contact-meta-block">
                         <i class="d-inline fs-4 bi bi-pin-map-fill"></i>
                         <h4 class="d-inline">Our Location</h4>
-                        <p class="arabic text-start">
+                        <p class="arabic text-md-start">
                             5 متفرع من، جسر السويس <br />
                             سراى القبة، محافظة القاهرة <br />
                         </p>
