--- a/pages/achievement.html
+++ b/pages/achievement.html
@@ -15,7 +15,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-fourth fixed-top">
         <div class="container">
-            <a class="navbar-brand fw-bold text-light" href="#">
+            <a class="navbar-brand fw-bold text-light" href="../index.html">
                 <img src="../img/logo.png" width="50px" height="45px" alt="" />
                 As-Salam College
             </a>
@@ -104,7 +104,7 @@
                     <div class="box">
                         <img src="https://picsum.photos/300/150" alt="" />
                         <div class="caption">
-                            <h4 >Awesome Image</h4>
+                            <h4>Awesome Image</h4>
                             <p>Photography</p>
                         </div>
                     </div>
@@ -155,8 +155,7 @@
             <div class="row justify-content-center">
                 <div class="card bg-light m-3" style="width:250px">
                     <img class="card-img-top hover-zoom align-self-center" alt="Card image"
-                        style="width:10rem;height: 10rem;"
-                        src='https://avataaars.io/?avatarStyle=Circle&topType=LongHairStraight&accessoriesType=Blank&hairColor=BrownDark&facialHairType=Blank&clotheType=BlazerShirt&eyeType=Default&eyebrowType=Default&mouthType=Default&skinColor=Light' />
+                        style="width:10rem;height: 10rem;" src='../img/avatars/avatar1.svg' />
                     <div class="card-body">
                         <h4 class="card-title text-dark">Ms.Mariam</h4>
                         <p class="card-text text-muted">Some example text some example text. Ms.Mariam is a teacher
@@ -166,8 +165,7 @@
                 </div>
                 <div class="card bg-white m-3" style="width:250px">
                     <img class="card-img-top hover-zoom align-self-center" alt="Card image"
-                        style="width:10rem;height: 10rem;"
-                        src='https://avataaars.io/?avatarStyle=Circle&topType=ShortHairShortCurly&accessoriesType=Sunglasses&hairColor=Black&facialHairType=Blank&clotheType=CollarSweater&clotheColor=Red&eyeType=WinkWacky&eyebrowType=Angry&mouthType=Twinkle&skinColor=Yellow' />
+                        style="width:10rem;height: 10rem;" src='../img/avatars/avatar2.svg' />
                     <div class="card-body">
                         <h4 class="card-title text-dark">Mr.Mohammed</h4>
                         <p class="card-text text-muted">Some example text some example. Mr.Mohammed is a teacher
@@ -177,8 +175,7 @@
                 </div>
                 <div class="card bg-white m-3" style="width:250px">
                     <img class="card-img-top hover-zoom align-self-center" alt="Card image"
-                        style="width:10rem;height: 10rem;"
-                        src='https://avataaars.io/?avatarStyle=Circle&topType=Hijab&accessoriesType=Sunglasses&hatColor=Gray02&clotheType=CollarSweater&clotheColor=Heather&eyeType=Close&eyebrowType=RaisedExcited&mouthType=Twinkle&skinColor=Yellow' />
+                        style="width:10rem;height: 10rem;" src='../img/avatars/avatar3.svg' />
                     <div class="card-body">
                         <h4 class="card-title text-dark">Ms.Assma</h4>
                         <p class="card-text text-muted">Some example text some example text. Ms.Assma is a teacher
@@ -188,8 +185,7 @@
                 </div>
                 <div class="card bg-white m-3" style="width:250px">
                     <img class="card-img-top hover-zoom align-self-center" alt="Card image"
-                        style="width:10rem;height: 10rem;"
-                        src='https://avataaars.io/?avatarStyle=Circle&topType=ShortHairTheCaesarSidePart&accessoriesType=Blank&hairColor=Brown&facialHairType=MoustacheMagnum&facialHairColor=Brown&clotheType=CollarSweater&clotheColor=White&eyeType=Default&eyebrowType=UpDownNatural&mouthType=Serious&skinColor=Yellow' />
+                        style="width:10rem;height: 10rem;" src='../img/avatars/avatar4.svg' />
                     <div class="card-body">
                         <h4 class="card-title text-dark">Mr.Salah</h4>
                         <p class="card-text text-muted">Some example text some example text. Mr.Salah is a teacher
@@ -364,13 +360,14 @@
     <!-- Footer -->
 
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 p-5 border-top border-3 bg-fourth">
-        <p class="col-md-4 mb-0 text-light">
+        <p class="col-md-4 mb-0 mfooter text-light">
             &lt; <span class="text-purple">
                 Developed By
             </span> &gt;
-            <a class="text-success text-decoration-none" href="#">Amr Khaled</a>
+            <a class="text-success text-decoration-none" href="https://www.linkedin.com/in/3mr5aled/">Amr Khaled</a>
             &
-            <a class="text-success text-decoration-none" href="https://www.linkedin.com/in/%D8%B9%D8%A8%D8%AF%D8%A7%D9%84%D8%B1%D8%AD%D9%85%D9%86-%D8%B9%D8%A8%D9%8A%D8%A7%D9%86-07a2bb183/">Abdelrhman Ebian</a>
+            <a class="text-success text-decoration-none" href="https://www.linkedin.com/in/abdelrhmanebian">Abdelrhman
+                Ebian</a>
         </p>
 
         <a href="../index.html"
@@ -379,10 +376,10 @@
         </a>
 
         <ul class="nav col-md-4 justify-content-end">
-            <li class="nav-item">
+            <li class="nav-item mfootnav">
                 <a href="../index.html" class="nav-link px-2 text-muted">Homepage</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item mfootnav">
                 <a href="achievement.html" class="nav-link px-2 text-muted">Achivements</a>
             </li>
         </ul>
