--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <meta property="og:title" content="As-Salam College School">
   <meta property="og:description"
     content="As-Salam College School for elementary and secondary education one of the best schools in El-zaiton">
-  <meta property="og:image" content="img/banner.jpg">
+  <meta property="og:image" content="https://el-salam-college.netlify.app/img/banner.jpg">
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
@@ -32,7 +32,7 @@
   <meta name="twitter:title" content="As-Salam College School">
   <meta name="twitter:description"
     content="As-Salam College School for elementary and secondary education one of the best schools in El-zaiton">
-  <meta name="twitter:image" content="img/banner.jpg">
+  <meta name="twitter:image" content="https://el-salam-college.netlify.app/img/banner.jpg">
 
   <!-- Meta Tags Generated via https://www.opengraph.xyz -->
 
