--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
               <li><a class="dropdown-item" href="pages/achievement.html#contactus">Contact Us</a></li>
             </ul>
           </li>
+          <li>
+            <a href="pages/dross.html" class="nav-link">Dross</a>
+          </li>
         </ul>
       </div>
     </div>
@@ -385,6 +388,9 @@
       </li>
       <li class="nav-item mfootnav">
         <a href="pages/achievement.html" class="nav-link px-2 text-muted">Achivements</a>
+      </li>
+      <li class="nav-item mfootnav">
+        <a href="pages/dross.html" class="nav-link px-2 text-muted">Dross</a>
       </li>
     </ul>
   </footer>
