--- a/pages/achievement.html
+++ b/pages/achievement.html
@@ -58,6 +58,9 @@
                             <li><a class="dropdown-item" href="#contact">Contact Us</a></li>
                         </ul>
                     </li>
+                    <li>
+                        <a href="dross.html" class="nav-link">Dross</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -381,6 +384,9 @@
             </li>
             <li class="nav-item mfootnav">
                 <a href="achievement.html" class="nav-link px-2 text-muted">Achivements</a>
+            </li>
+            <li class="nav-item mfootnav">
+                <a href="dross.html" class="nav-link px-2 text-muted">Dross</a>
             </li>
         </ul>
     </footer>
