--- a/pages/achievement.html
+++ b/pages/achievement.html
@@ -262,7 +262,7 @@
     </section>
 
     <!-- Contact us Section -->
-    <section class="contact-us bg-dark pt-5" id="contact">
+    <section class="contact-us bg-dark pb-2 pt-5" id="contact">
         <div class="container">
             <div class="row">
                 <div class="col-12">
@@ -277,7 +277,8 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
+            <div class="row align-items-center justify-content-center">
+
                 <!-- Contact Details -->
                 <a class="col-md-6 map" href="https://goo.gl/maps/fGKBPpdDYTNJyH3MA" target="_blank">
                     <span>Click here for location <i class="bi bi-hand-index-thumb-fill"></i></span></a>
@@ -321,7 +322,7 @@
                     <div class="address-block contact-meta-block">
                         <i class="d-inline fs-4 bi bi-pin-map-fill"></i>
                         <h4 class="d-inline">Our Location</h4>
-                        <p class="arabic text-md-start">
+                        <p class="arabic text-md-center">
                             5 متفرع من، جسر السويس <br />
                             سراى القبة، محافظة القاهرة <br />
                         </p>
@@ -362,7 +363,8 @@
 
     <!-- Footer -->
 
-    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 p-5 border-top border-3 bg-fourth">
+    <footer
+        class="d-flex flex-wrap justify-content-center justify-content-lg-between align-items-center p-2rem  bg-fourth">
         <p class="col-md-4 mb-0 mfooter text-light">
             &lt; <span class="text-purple">
                 Developed By
