--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       <h2 class="special-heading mb-5 mt-md-4">تعرف علينا</h2>
       <div class="d-flex justify-content-around align-items-center flex-column flex-lg-row">
         <div class="text-start d-flex flex-column me-lg-5 justify-content-center">
-          <div class="card bg-main hoverbg p-3 mb-2">
+          <div class="card bg-main hoverbg p-3 m-2 m-md-0 mb-md-2">
             <div class="card-body text-center">
               <div class="card-title text-capitalize h4">مهمتنا</div>
               <div class="card-text lead">
@@ -119,7 +119,7 @@
               </div>
             </div>
           </div>
-          <div class="card bg-main hoverbg p-3 mb-2">
+          <div class="card bg-main hoverbg p-3 m-2 m-md-0 mb-md-2">
             <div class="card-body text-center">
               <div class="card-title text-capitalize h4">رؤيتنا</div>
               <div class="card-text lead">
@@ -129,7 +129,7 @@
             </div>
           </div>
         </div>
-        <div class="img-fluid imgcont">
+        <div class="img-fluid imgcont mt-3 mt-md-0">
           <img class="imghover img-fluid" src="img/gate.webp" alt="" />
         </div>
       </div>
@@ -267,7 +267,7 @@
   </section>
 
   <!-- Contact us Section -->
-  <section class="contact-us py-5 bg-dark" id="contact">
+  <section class="contact-us pb-2 pt-5 bg-dark" id="contact">
     <div class="container">
       <div class="row justify-content-center align-items-center">
         <div class="col-12">
@@ -282,7 +282,7 @@
           </div>
         </div>
       </div>
-      <div class="row align-items-center">
+      <div class="row align-items-center justify-content-center">
         <!-- Contact Details -->
         <a class="col-md-6  map" href="https://goo.gl/maps/fGKBPpdDYTNJyH3MA" target="_blank">
           <span>Click here for location <i class="bi bi-hand-index-thumb-fill"></i></span></a>
@@ -323,7 +323,7 @@
           <div class="address-block contact-meta-block text-center">
             <i class="d-inline fs-4 bi bi-pin-map-fill"></i>
             <h4 class="d-inline">Our Location</h4>
-            <p class="arabic text-md-start">
+            <p class="arabic text-md-center">
               5 متفرع من، جسر السويس <br />
               سراى القبة، محافظة القاهرة <br />
             </p>
@@ -364,7 +364,8 @@
 
   <!-- Footer -->
 
-  <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 p-5 border-top border-3 bg-fourth">
+  <footer
+    class="d-flex flex-wrap justify-content-center justify-content-lg-between align-items-center p-2rem  bg-fourth">
     <p class="col-md-4 mb-0 mfooter text-light">
       &lt;
       <span class="text-purple">Developed By</span>
