--- a/pages/dross.html
+++ b/pages/dross.html
@@ -69,7 +69,7 @@
     <!-- <div class="container mt-4"> -->
 
 
-    <section class="fullgage mt-5 container align-content-center text-center">
+    <section class="fullpage d-flex justify-content-center flex-column container align-content-center text-center">
         <div class="tab pb-3">
             <button class="tablinks" onclick="openCity(event, 'prep1')" id="defaultOpen">الصف الأول الإعدادي</button>
             <button class="tablinks" onclick="openCity(event, 'prep2')">الصف الثاني الإعدادي</button>
@@ -79,20 +79,20 @@
         </div>
 
         <!-- Tab content -->
-        <div id="prep1" class="tabcontent">
-            <h3 class="special-heading mb-5">الصف الأول الإعدادي</h3>
+        <div id="prep1" class="tabcontent pb-5">
+            <h3 class="special-heading my-5 ">الصف الأول الإعدادي</h3>
             <p class="py-3">هذا هو جدول مواعيد مجموعات التقوية بالمدرسة علي من يريد الإشتراك تسجيل اسمه</p>
 
 
             <div>
-                <a class="my-3" target="_blank"
+                <a target="_blank"
                     href="https://docs.google.com/spreadsheets/d/1gEkzSQZVoV1DcsEXQRVwIWcNq3uVwwqjZet4DC5wFBI/edit?usp=sharing">
-                    <button class="btn btn-dark"><i class="bi bi-table"></i> جدول المواعيد</button>
+                    <button class="btn btn-dark m-3"><i class="bi bi-table"></i> جدول المواعيد</button>
                 </a>
-                <a target="_blank" href="#"><button class="my-3 btn btn-warning text-light fw-bold"><i
+                <a target="_blank" href="#"><button class="m-3 btn btn-warning text-light fw-bold"><i
                             class="bi bi-pencil-fill"></i>سجل
                         الأن</button></a>
-                <a target="_blank" href="#"><button class="my-3 btn btn-success text-light fw-bold"><i
+                <a target="_blank" href="#"><button class="m-3 btn btn-success text-light fw-bold"><i
                             class="bi bi-whatsapp"></i>
                         للحجز
                         و
@@ -101,20 +101,20 @@
                         الأسعار</button></a>
             </div>
         </div>
-        <div id="prep2" class="tabcontent">
-            <h3 class="special-heading mb-5">الصف ألثاني الإعدادي</h3>
+        <div id="prep2" class="tabcontent pb-5">
+            <h3 class="special-heading my-5 ">الصف ألثاني الإعدادي</h3>
             <p class="py-3">هذا هو جدول مواعيد مجموعات التقوية بالمدرسة علي من يريد الإشتراك تسجيل اسمه</p>
 
 
             <div>
-                <a class="my-3" target="_blank"
+                <a target="_blank"
                     href="https://docs.google.com/spreadsheets/d/1gEkzSQZVoV1DcsEXQRVwIWcNq3uVwwqjZet4DC5wFBI/edit?usp=sharing">
-                    <button class="btn btn-dark"><i class="bi bi-table"></i> جدول المواعيد</button>
+                    <button class="btn btn-dark m-3"><i class="bi bi-table"></i> جدول المواعيد</button>
                 </a>
-                <a target="_blank" href="#"><button class="my-3 btn btn-warning text-light fw-bold"><i
+                <a target="_blank" href="#"><button class="m-3 btn btn-warning text-light fw-bold"><i
                             class="bi bi-pencil-fill"></i>سجل
                         الأن</button></a>
-                <a target="_blank" href="#"><button class="my-3 btn btn-success text-light fw-bold"><i
+                <a target="_blank" href="#"><button class="m-3 btn btn-success text-light fw-bold"><i
                             class="bi bi-whatsapp"></i>
                         للحجز
                         و
@@ -123,21 +123,21 @@
                         الأسعار</button></a>
             </div>
         </div>
-        <div id="prep3" class="tabcontent">
-            <h3 class="special-heading mb-5">الصف الثالث الإعدادي</h3>
+        <div id="prep3" class="tabcontent pb-5">
+            <h3 class="special-heading my-5 ">الصف الثالث الإعدادي</h3>
             <p class="py-3">هذا هو جدول مواعيد مجموعات التقوية بالمدرسة علي من يريد الإشتراك تسجيل اسمه</p>
 
 
             <div>
-                <a class="my-3" target="_blank"
+                <a target="_blank"
                     href="https://docs.google.com/spreadsheets/d/1gEkzSQZVoV1DcsEXQRVwIWcNq3uVwwqjZet4DC5wFBI/edit?usp=sharing">
-                    <button class="btn btn-dark"><i class="bi bi-table"></i> جدول المواعيد</button>
+                    <button class="btn btn-dark m-3"><i class="bi bi-table"></i> جدول المواعيد</button>
                 </a>
                 <a target="_blank"
                     href="https://docs.google.com/forms/d/e/1FAIpQLSfhTDwZJJmuQ1esnxeLXoOqaPddzZAMhVYq4y4Pt15VFyDmcg/viewform?vc=0&c=0&w=1&flr=0"><button
-                        class="my-3 btn btn-warning text-light fw-bold"><i class="bi bi-pencil-fill"></i>سجل
+                        class="m-3 btn btn-warning text-light fw-bold"><i class="bi bi-pencil-fill"></i>سجل
                         الأن</button></a>
-                <a target="_blank" href="#"><button class="my-3 btn btn-success text-light fw-bold"><i
+                <a target="_blank" href="#"><button class="m-3 btn btn-success text-light fw-bold"><i
                             class="bi bi-whatsapp"></i>
                         للحجز
                         و
@@ -146,21 +146,21 @@
                         الأسعار</button></a>
             </div>
         </div>
-        <div id="sec1" class="tabcontent">
-            <h3 class="special-heading mb-5">الصف الأول الثانوي</h3>
+        <div id="sec1" class="tabcontent pb-5">
+            <h3 class="special-heading my-5 ">الصف الأول الثانوي</h3>
             <p class="py-3">هذا هو جدول مواعيد مجموعات التقوية بالمدرسة علي من يريد الإشتراك تسجيل اسمه</p>
 
 
             <div>
-                <a class="my-3" target="_blank"
+                <a target="_blank"
                     href="https://docs.google.com/spreadsheets/d/1gEkzSQZVoV1DcsEXQRVwIWcNq3uVwwqjZet4DC5wFBI/edit?usp=sharing">
-                    <button class="btn btn-dark"><i class="bi bi-table"></i> جدول المواعيد</button>
+                    <button class="btn btn-dark m-3"><i class="bi bi-table"></i> جدول المواعيد</button>
                 </a>
                 <a target="_blank"
                     href="https://docs.google.com/forms/d/e/1FAIpQLSe9Y-zFcZP-NkzObKYvp0KIw-NUoSFAxbc6AItSlckNPBGvMQ/viewform?vc=0&c=0&w=1&flr=0"><button
-                        class="my-3 btn btn-warning text-light fw-bold"><i class="bi bi-pencil-fill"></i>سجل
+                        class="m-3 btn btn-warning text-light fw-bold"><i class="bi bi-pencil-fill"></i>سجل
                         الأن</button></a>
-                <a target="_blank" href="#"><button class="my-3 btn btn-success text-light fw-bold"><i
+                <a target="_blank" href="#"><button class="m-3 btn btn-success text-light fw-bold"><i
                             class="bi bi-whatsapp"></i>
                         للحجز
                         و
@@ -169,21 +169,21 @@
                         الأسعار</button></a>
             </div>
         </div>
-        <div id="sec2" class="tabcontent">
-            <h3 class="special-heading mb-5">الصف الثاني الثانوي</h3>
+        <div id="sec2" class="tabcontent pb-5">
+            <h3 class="special-heading my-5 ">الصف الثاني الثانوي</h3>
             <p class="py-3">هذا هو جدول مواعيد مجموعات التقوية بالمدرسة علي من يريد الإشتراك تسجيل اسمه</p>
 
 
             <div>
-                <a class="my-3" target="_blank"
+                <a target="_blank"
                     href="https://docs.google.com/spreadsheets/d/1gEkzSQZVoV1DcsEXQRVwIWcNq3uVwwqjZet4DC5wFBI/edit?usp=sharing">
-                    <button class="btn btn-dark"><i class="bi bi-table"></i> جدول المواعيد</button>
+                    <button class="btn btn-dark m-3"><i class="bi bi-table"></i> جدول المواعيد</button>
                 </a>
                 <a target="_blank"
                     href="https://docs.google.com/forms/d/e/1FAIpQLSdnp3ItlsrGIGoCP5RWvmMKrGWLwIy37nPDK4Moq7Tdd6Nxng/viewform?vc=0&c=0&w=1&flr=0"><button
-                        class="my-3 btn btn-warning text-light fw-bold"><i class="bi bi-pencil-fill"></i>سجل
+                        class="m-3 btn btn-warning text-light fw-bold"><i class="bi bi-pencil-fill"></i>سجل
                         الأن</button></a>
-                <a target="_blank" href="#"><button class="my-3 btn btn-success text-light fw-bold"><i
+                <a target="_blank" href="#"><button class="m-3 btn btn-success text-light fw-bold"><i
                             class="bi bi-whatsapp"></i>
                         للحجز
                         و
@@ -197,9 +197,8 @@
 
     <!-- Footer -->
 
-    <footer class=" container-fluid d-flex flex-wrap justify-content-between align-items-center py-3 p-5 border-top
-                border-3 bg-fourth" style="  position: fixed;
-                bottom: 0;">
+    <footer class=" container-fluid d-flex flex-wrap justify-content-center justify-content-lg-between align-items-center p-2rem border-top
+                border-3 bg-fourth">
         <p class="col-md-4 mb-0 mfooter text-light">
             &lt; <span class="text-purple">
                 Developed By
