--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
               <li><a class="dropdown-item" href="pages/achievement.html#contactus">Contact Us</a></li>
             </ul>
           </li>
-          <li>
-            <a href="pages/dross.html" class="nav-link">Dross</a>
+          <li class="nav-item">
+            <a class="nav-link drossnav active" href="pages/dross.html">Dross</a>
           </li>
         </ul>
       </div>
@@ -384,13 +384,13 @@
     </a>
 
     <ul class="nav col-md-4 justify-content-end">
-      <li class="nav-item mfootnav">
+      <li class="nav-item pe-2 pe-md-0 mfootnav">
         <a href="index.html" class="nav-link px-2 text-muted">Homepage</a>
       </li>
       <li class="nav-item mfootnav">
         <a href="pages/achievement.html" class="nav-link px-2 text-muted">Achivements</a>
       </li>
-      <li class="nav-item mfootnav">
+      <li class="nav-item ps-2 ps-md-0 mfootnav">
         <a href="pages/dross.html" class="nav-link px-2 text-muted">Dross</a>
       </li>
     </ul>
