--- a/pages/achievement.html
+++ b/pages/achievement.html
@@ -58,8 +58,8 @@
                             <li><a class="dropdown-item" href="#contact">Contact Us</a></li>
                         </ul>
                     </li>
-                    <li>
-                        <a href="dross.html" class="nav-link">Dross</a>
+                    <li class="nav-item">
+                        <a class="nav-link drossnav active" href="dross.html">Dross</a>
                     </li>
                 </ul>
             </div>
@@ -366,12 +366,15 @@
     <footer
         class="d-flex flex-wrap justify-content-center justify-content-lg-between align-items-center p-2rem  bg-fourth">
         <p class="col-md-4 mb-0 mfooter text-light">
-            &lt; <span class="text-purple">
-                Developed By
-            </span> &gt;
-            <a class="text-success text-decoration-none" href="https://www.linkedin.com/in/3mr5aled/">Amr Khaled</a>
+            &lt;
+            <span class="text-purple">Developed By</span>
+            &gt;
+            <a class="text-success text-decoration-none" target="_blank"
+                href="https://www.linkedin.com/in/3mr5aled/">Amr
+                Khaled</a>
             &
-            <a class="text-success text-decoration-none" href="https://www.linkedin.com/in/abdelrhmanebian">Abdelrhman
+            <a class="text-success text-decoration-none" target="_blank"
+                href="https://www.linkedin.com/in/abdelrhmanebian">Abdelrhman
                 Ebian</a>
         </p>
 
@@ -381,17 +384,18 @@
         </a>
 
         <ul class="nav col-md-4 justify-content-end">
-            <li class="nav-item mfootnav">
+            <li class="nav-item pe-2 pe-md-0 mfootnav">
                 <a href="../index.html" class="nav-link px-2 text-muted">Homepage</a>
             </li>
             <li class="nav-item mfootnav">
                 <a href="achievement.html" class="nav-link px-2 text-muted">Achivements</a>
             </li>
-            <li class="nav-item mfootnav">
+            <li class="nav-item ps-2 ps-md-0 mfootnav">
                 <a href="dross.html" class="nav-link px-2 text-muted">Dross</a>
             </li>
         </ul>
     </footer>
+
     <!-- Scripts links -->
     <script src="../js/popper.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
