--- a/pages/dross.html
+++ b/pages/dross.html
@@ -58,8 +58,8 @@
                             <li><a class="dropdown-item" href="achievement.html#contact">Contact Us</a></li>
                         </ul>
                     </li>
-                    <li>
-                        <a href="dross.html" class="nav-link active">Dross</a>
+                    <li class="nav-item">
+                        <a class="nav-link drossnav active" href="dross.html">Dross</a>
                     </li>
                 </ul>
             </div>
@@ -87,18 +87,16 @@
             <div>
                 <a target="_blank"
                     href="https://docs.google.com/spreadsheets/d/1gEkzSQZVoV1DcsEXQRVwIWcNq3uVwwqjZet4DC5wFBI/edit?usp=sharing">
-                    <button class="btn btn-dark m-3"><i class="bi bi-table"></i> جدول المواعيد</button>
+                    <button class="btn btn-dark m-3 text-nowrap"><i class="bi bi-table"></i> جدول المواعيد</button>
                 </a>
-                <a target="_blank" href="#"><button class="m-3 btn btn-warning text-light fw-bold"><i
+                <a target="_blank" href="#"><button class="m-3 btn btn-warning text-light fw-bold text-nowrap"><i
                             class="bi bi-pencil-fill"></i>سجل
                         الأن</button></a>
-                <a target="_blank" href="#"><button class="m-3 btn btn-success text-light fw-bold"><i
+                <a target="_blank" href="#"><button class="m-3 btn btn-success text-light fw-bold text-nowrap"><i
                             class="bi bi-whatsapp"></i>
                         للحجز
                         و
-                        الإستعلام عن المواعيد
-                        و
-                        الأسعار</button></a>
+                        الإستعلام</button></a>
             </div>
         </div>
         <div id="prep2" class="tabcontent pb-5">
@@ -109,18 +107,16 @@
             <div>
                 <a target="_blank"
                     href="https://docs.google.com/spreadsheets/d/1gEkzSQZVoV1DcsEXQRVwIWcNq3uVwwqjZet4DC5wFBI/edit?usp=sharing">
-                    <button class="btn btn-dark m-3"><i class="bi bi-table"></i> جدول المواعيد</button>
+                    <button class="btn btn-dark m-3 text-nowrap"><i class="bi bi-table"></i> جدول المواعيد</button>
                 </a>
-                <a target="_blank" href="#"><button class="m-3 btn btn-warning text-light fw-bold"><i
+                <a target="_blank" href="#"><button class="m-3 btn btn-warning text-light fw-bold text-nowrap"><i
                             class="bi bi-pencil-fill"></i>سجل
                         الأن</button></a>
-                <a target="_blank" href="#"><button class="m-3 btn btn-success text-light fw-bold"><i
+                <a target="_blank" href="#"><button class="m-3 btn btn-success text-light fw-bold text-nowrap"><i
                             class="bi bi-whatsapp"></i>
                         للحجز
                         و
-                        الإستعلام عن المواعيد
-                        و
-                        الأسعار</button></a>
+                        الإستعلام</button></a>
             </div>
         </div>
         <div id="prep3" class="tabcontent pb-5">
@@ -131,19 +127,17 @@
             <div>
                 <a target="_blank"
                     href="https://docs.google.com/spreadsheets/d/1gEkzSQZVoV1DcsEXQRVwIWcNq3uVwwqjZet4DC5wFBI/edit?usp=sharing">
-                    <button class="btn btn-dark m-3"><i class="bi bi-table"></i> جدول المواعيد</button>
+                    <button class="btn btn-dark m-3 text-nowrap"><i class="bi bi-table"></i> جدول المواعيد</button>
                 </a>
                 <a target="_blank"
                     href="https://docs.google.com/forms/d/e/1FAIpQLSfhTDwZJJmuQ1esnxeLXoOqaPddzZAMhVYq4y4Pt15VFyDmcg/viewform?vc=0&c=0&w=1&flr=0"><button
-                        class="m-3 btn btn-warning text-light fw-bold"><i class="bi bi-pencil-fill"></i>سجل
+                        class="m-3 btn btn-warning text-light fw-bold text-nowrap"><i class="bi bi-pencil-fill"></i>سجل
                         الأن</button></a>
-                <a target="_blank" href="#"><button class="m-3 btn btn-success text-light fw-bold"><i
+                <a target="_blank" href="#"><button class="m-3 btn btn-success text-light fw-bold text-nowrap"><i
                             class="bi bi-whatsapp"></i>
                         للحجز
                         و
-                        الإستعلام عن المواعيد
-                        و
-                        الأسعار</button></a>
+                        الإستعلام</button></a>
             </div>
         </div>
         <div id="sec1" class="tabcontent pb-5">
@@ -154,19 +148,17 @@
             <div>
                 <a target="_blank"
                     href="https://docs.google.com/spreadsheets/d/1gEkzSQZVoV1DcsEXQRVwIWcNq3uVwwqjZet4DC5wFBI/edit?usp=sharing">
-                    <button class="btn btn-dark m-3"><i class="bi bi-table"></i> جدول المواعيد</button>
+                    <button class="btn btn-dark m-3 text-nowrap"><i class="bi bi-table"></i> جدول المواعيد</button>
                 </a>
                 <a target="_blank"
                     href="https://docs.google.com/forms/d/e/1FAIpQLSe9Y-zFcZP-NkzObKYvp0KIw-NUoSFAxbc6AItSlckNPBGvMQ/viewform?vc=0&c=0&w=1&flr=0"><button
-                        class="m-3 btn btn-warning text-light fw-bold"><i class="bi bi-pencil-fill"></i>سجل
+                        class="m-3 btn btn-warning text-light fw-bold text-nowrap"><i class="bi bi-pencil-fill"></i>سجل
                         الأن</button></a>
-                <a target="_blank" href="#"><button class="m-3 btn btn-success text-light fw-bold"><i
+                <a target="_blank" href="#"><button class="m-3 btn btn-success text-light fw-bold text-nowrap"><i
                             class="bi bi-whatsapp"></i>
                         للحجز
                         و
-                        الإستعلام عن المواعيد
-                        و
-                        الأسعار</button></a>
+                        الإستعلام</button></a>
             </div>
         </div>
         <div id="sec2" class="tabcontent pb-5">
@@ -177,19 +169,17 @@
             <div>
                 <a target="_blank"
                     href="https://docs.google.com/spreadsheets/d/1gEkzSQZVoV1DcsEXQRVwIWcNq3uVwwqjZet4DC5wFBI/edit?usp=sharing">
-                    <button class="btn btn-dark m-3"><i class="bi bi-table"></i> جدول المواعيد</button>
+                    <button class="btn btn-dark m-3 text-nowrap"><i class="bi bi-table"></i> جدول المواعيد</button>
                 </a>
                 <a target="_blank"
                     href="https://docs.google.com/forms/d/e/1FAIpQLSdnp3ItlsrGIGoCP5RWvmMKrGWLwIy37nPDK4Moq7Tdd6Nxng/viewform?vc=0&c=0&w=1&flr=0"><button
-                        class="m-3 btn btn-warning text-light fw-bold"><i class="bi bi-pencil-fill"></i>سجل
+                        class="m-3 btn btn-warning text-light fw-bold text-nowrap"><i class="bi bi-pencil-fill"></i>سجل
                         الأن</button></a>
-                <a target="_blank" href="#"><button class="m-3 btn btn-success text-light fw-bold"><i
+                <a target="_blank" href="#"><button class="m-3 btn btn-success text-light fw-bold text-nowrap"><i
                             class="bi bi-whatsapp"></i>
                         للحجز
                         و
-                        الإستعلام عن المواعيد
-                        و
-                        الأسعار</button></a>
+                        الإستعلام</button></a>
             </div>
         </div>
 
@@ -197,16 +187,18 @@
 
     <!-- Footer -->
 
-    <footer class=" container-fluid d-flex flex-wrap justify-content-center justify-content-lg-between align-items-center p-2rem border-top
-                border-3 bg-fourth">
+    <footer
+        class="d-flex flex-wrap justify-content-center justify-content-lg-between align-items-center p-2rem  bg-fourth">
         <p class="col-md-4 mb-0 mfooter text-light">
-            &lt; <span class="text-purple">
-                Developed By
-            </span> &gt;
-            <a class="text-success text-decoration-none" href="https://www.linkedin.com/in/3mr5aled/">Amr
+            &lt;
+            <span class="text-purple">Developed By</span>
+            &gt;
+            <a class="text-success text-decoration-none" target="_blank"
+                href="https://www.linkedin.com/in/3mr5aled/">Amr
                 Khaled</a>
             &
-            <a class="text-success text-decoration-none" href="https://www.linkedin.com/in/abdelrhmanebian">Abdelrhman
+            <a class="text-success text-decoration-none" target="_blank"
+                href="https://www.linkedin.com/in/abdelrhmanebian">Abdelrhman
                 Ebian</a>
         </p>
 
@@ -216,17 +208,18 @@
         </a>
 
         <ul class="nav col-md-4 justify-content-end">
-            <li class="nav-item mfootnav">
+            <li class="nav-item pe-2 pe-md-0 mfootnav">
                 <a href="../index.html" class="nav-link px-2 text-muted">Homepage</a>
             </li>
             <li class="nav-item mfootnav">
                 <a href="achievement.html" class="nav-link px-2 text-muted">Achivements</a>
             </li>
-            <li class="nav-item mfootnav">
+            <li class="nav-item ps-2 ps-md-0 mfootnav">
                 <a href="dross.html" class="nav-link px-2 text-muted">Dross</a>
             </li>
         </ul>
     </footer>
+
     <!-- Scripts links -->
     <script src="../js/popper.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
