adds Scroll to top

--- a/index.html
+++ b/index.html
@@ -85,13 +85,17 @@
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link drossnav active" href="pages/dross.html">Dross</a>
+            <a class="nav-link drossnav" href="pages/dross.html">Dross</a>
           </li>
         </ul>
       </div>
     </div>
     <!-- </div> -->
   </nav>
+
+  <!-- Scroll to Top Button -->
+  <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="bi bi-arrow-up"></i></button>
+
 
   <!-- landing section -Boody -->
   <main id="main" class="text-center">
