--- a/pages/achievement.html
+++ b/pages/achievement.html
@@ -59,7 +59,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link drossnav active" href="dross.html">Dross</a>
+                        <a class="nav-link drossnav" href="dross.html">Dross</a>
                     </li>
                 </ul>
             </div>
@@ -67,6 +67,11 @@
         </div>
     </nav>
     <!-- <div class="container mt-4"> -->
+
+    <!-- Scroll to Top Button -->
+    <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="bi bi-arrow-up"></i></button>
+
+
 
     <!--* Achievement section -Amr -->
     <section id="achievements" class=" py-5 text-center align-items-center">
